# opensauna

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PRIVACY.md  README.md  Trunk.toml  index.html  rust-toolchain.toml  styles.css  test_api.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/hotworx-api/: Cargo.toml  README.md
crates/hotworx-api/src/: auth.rs  client.rs  error.rs  headers.rs  lib.rs
crates/hotworx-api/src/models/: activity.rs  auth.rs  booking.rs  dashboard.rs  location.rs  mod.rs  profile.rs
crates/hotworx-api/tests/: error_mapping.rs  login_response.rs  password_hash.rs
docs/: ARCHITECTURE.md  SIGNING.md  why-opensauna.md
hotworx-mcp/: .gitignore  Cargo.toml  README.md
hotworx-mcp/src/: main.rs
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auth.rs  booking.rs  client.rs  dashboard.rs  mod.rs  profile.rs
src/components/: active_session.rs  bottom_nav.rs  button.rs  icons.rs  input.rs  loading.rs  mod.rs  session_card.rs  session_timer.rs  toast.rs
src/models/: api.rs  auth.rs  booking.rs  dashboard.rs  location.rs  mod.rs  profile.rs  session_tracking.rs
src/pages/: booking.rs  dashboard.rs  locations.rs  login.rs  mod.rs  otp.rs  profile.rs  quick_book.rs  sessions.rs
src/state/: auth_state.rs  mod.rs  session_state.rs
src/utils/: booking.rs  dates.rs  format.rs  mod.rs  nav.rs  tauri.rs
