[package]
name = "hotworx-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
hotworx-api = { path = "../crates/hotworx-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
