[package]
name = "bookworx"
version = "0.2.0"
description = "BookWorx - Hotworx session booking app"
authors = ["Nader Heidari"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bookworx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
hotworx-api = { path = "../crates/hotworx-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

